# f3d-experiments

options-struct-poc/: CMakeLists.txt  app.cpp  options-io.cpp  options-io.h  options-structio.cpp  options-structio.h  options.h  structio.py  structparse.py
python-examples/: compare.html  compare.ipynb  example.ipynb  f3d_ipython.py  ipython_imagecompare.py  turntable.py
